# gplaydl

./: .gitignore  LICENSE  com.evozi.deviceid.apk  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
gplaydl/: __init__.py  __main__.py  api.py  auth.py  cli.py  download.py  gplaydl.py  profiles.py  protobuf.py
gplaydl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gplaydl/profiles/: 1Z.properties  7M.properties  8r.properties  B1.properties  D2.properties  F-.properties  Gj.properties  HE.properties  Hb.properties  IV.properties  L8.properties  Pv.properties  VP.properties  XK.properties  Yc.properties  b2.properties  eV.properties  iq.properties  lv.properties  p6.properties  wD.properties
profiles/: Fj.properties  Gb.properties
