[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gplaydl"
version = "2.1.0"
description = "Download APKs from Google Play Store with anonymous authentication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Rehmat Alam", email = "contact@rehmat.works"}]
keywords = ["google-play", "apk", "downloader", "android"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "typer==0.24.1",
    "rich==14.3.3",
    "requests==2.33.0",
    "cloudscraper==1.2.71",
]

[project.scripts]
gplaydl = "gplaydl.cli:app"

[project.urls]
Homepage = "https://github.com/rehmatworks/gplaydl"

[tool.setuptools.packages.find]
include = ["gplaydl*"]

[tool.setuptools.package-data]
"*" = ["*.properties"]
